--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,5 +42,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/admin, roles: ROLE_SUPER_ADMIN }
+         - { path: ^/backend, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
