--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
         "symfony/yaml": "4.4.*",
+        "twilio/sdk": "^6.0",
         "vich/uploader-bundle": "^1.12"
     },
     "require-dev": {
